--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -10,18 +10,18 @@
   <div class="row">
     <div class="col-lg-12">
       <h1 class="page-header">Features:</h1>
-      <ul class="nav nav-tabs nav-stacked col-md-4 col-lg-4 col-sm-6" ng-repeat="thing in $ctrl.awesomeThings">
-        <li><a href="#" uib-tooltip="{{thing.info}}">{{thing.name}}<button type="button" class="close" ng-click="$ctrl.deleteThing(thing)">&times;</button></a></li>
+      <ul class="nav nav-tabs nav-stacked col-md-4 col-lg-4 col-sm-6" ng-repeat="vrf in $ctrl.Vrfs">
+        <li><a href="#" uib-tooltip="{{vrf.info}}">{{vrf.name}}<button type="button" class="close" ng-click="$ctrl.deleteVrf(vrf)">&times;</button></a></li>
       </ul>
     </div>
   </div>
 
-  <form class="thing-form">
+  <form class="vrf-form">
     <label>Syncs in realtime across clients</label>
     <p class="input-group">
-      <input type="text" class="form-control" placeholder="Add a new thing here." ng-model="$ctrl.newThing">
+      <input type="text" class="form-control" placeholder="Add a new vrf here." ng-model="$ctrl.newVrf">
       <span class="input-group-btn">
-        <button type="submit" class="btn btn-primary" ng-click="$ctrl.addThing()">Add New</button>
+        <button type="submit" class="btn btn-primary" ng-click="$ctrl.addVrf()">Add New</button>
       </span>
     </p>
   </form>
