--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -9,10 +9,76 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-12">
-      <h1 class="page-header">Features:</h1>
-      <ul class="nav nav-tabs nav-stacked col-md-4 col-lg-4 col-sm-6" ng-repeat="vrf in $ctrl.Vrfs">
-        <li><a href="#" uib-tooltip="{{vrf.info}}">{{vrf.name}}<button type="button" class="close" ng-click="$ctrl.deleteVrf(vrf)">&times;</button></a></li>
-      </ul>
+      <h1 class="page-header">Open Assignments:</h1>
+        <!-- accordion -->
+        <uib-accordion>
+          <uib-accordion-group heading="{{vrf.title}}" ng-repeat="vrf in $ctrl.Vrfs">
+            <!-- image and table row -->
+            <div class="row">
+              <div class="col-sm-6 col-md-3 col-lg-3">
+                <img ng-src="assets/images/ph.jpg" class="img-thumbnail img-responsive" alt="{{vrf.for}}">
+              </div>
+              <div class="col-sm-6 col-md-9 col-lg-9">
+                <table class="table table-responsive table-striped">
+                  <tr>
+                    <td>Franchise:</td>
+                    <td>{{vrf.for}}</td>
+                  </tr>
+                  <tr>
+                    <td>Date due:</td>
+                    <td>{{vrf.due}}</td>
+                  </tr>
+                  <tr>
+                    <td>Date requested:</td>
+                    <td>{{vrf.date}}</td>
+                  </tr>
+                  <tr>
+                    <td>Requested by:</td>
+                    <td>{{vrf.from}}</td>
+                  </tr>
+                  <tr>
+                    <td>Active:</td>
+                    <td ng-style="vrf.active && {'color': 'green'}">{{vrf.active ? 'Yes' : 'No'}}</td>
+                  </tr>
+                </table>
+              </div> 
+            </div>
+            <!-- /image and table -->
+            <!-- VRF message body -->
+            <div class="row">
+              <div class="col-lg-12">
+                <h3>Description</h3>
+                <p>{{vrf.body}}</p>
+              </div>
+            </div>
+            <!-- /VRF message body -->
+            <!-- notes -->
+            <div class="row">
+              <div class="col-lg-12">
+                <h3>Notes</h3>
+                <ul>
+                  <li ng-repeat="note in vrf.notes">{{note.body}}</li>
+                </ul>
+              </div>
+            </div>
+            <!-- /notes -->
+            <!-- submit new note -->
+            <div class="row" style="margin-top: 20px;">
+              <div class="col-lg-12">
+                <form class="note-form">
+                  <p class="input-group">
+                    <input type="text" class="form-control" placeholder="Add a new note here." ng-model="$ctrl.newNote">
+                    <span class="input-group-btn">
+                      <button type="submit" class="btn btn-primary" ng-click="$ctrl.addNote(vrf)">Add New</button>
+                    </span>
+                  </p>
+                </form>
+              </div>
+            </div>
+            <!-- /submit new note -->
+          </uib-accordion-group>
+        </uib-accordion>
+        <!-- /accordion -->
     </div>
   </div>
 
