--- a/client/index.html
+++ b/client/index.html
@@ -58,6 +58,7 @@
       <script src="bower_components/angular-socket-io/socket.js"></script>
       <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
       <script src="bower_components/angular-validation-match/dist/angular-validation-match.min.js"></script>
+      <script src="bower_components/ng-file-upload/ng-file-upload.js"></script>
       <!-- endbower -->
       <script src="socket.io-client/socket.io.js"></script>
     <!-- endbuild -->
@@ -86,7 +87,10 @@
       <script src="components/navbar/navbar.controller.js"></script>
       <script src="components/navbar/navbar.directive.js"></script>
       <script src="components/socket/socket.service.js"></script>
+      <script src="components/upload/upload.controller.js"></script>
+      <script src="components/upload/upload.directive.js"></script>
       <script src="components/util/util.service.js"></script>
+      <script src="components/vrf/vrf.service.js"></script>
       <!-- endinjector -->
     <!-- endbuild -->
   </body>
