--- a/client/index.html
+++ b/client/index.html
@@ -77,6 +77,8 @@
       <script src="app/app.constant.js"></script>
       <script src="app/main/main.controller.js"></script>
       <script src="app/main/main.js"></script>
+      <script src="app/utilities/utilities.controller.js"></script>
+      <script src="app/utilities/utilities.js"></script>
       <script src="components/auth/auth.service.js"></script>
       <script src="components/auth/interceptor.service.js"></script>
       <script src="components/auth/router.decorator.js"></script>
@@ -88,6 +90,7 @@
       <script src="components/navbar/navbar.directive.js"></script>
       <script src="components/socket/socket.service.js"></script>
       <script src="components/util/util.service.js"></script>
+      <script src="components/vrf/linebreak.filter.js"></script>
       <script src="components/vrf/vrf-accordion.directive.js"></script>
       <script src="components/vrf/vrf-upload.controller.js"></script>
       <script src="components/vrf/vrf-upload.directive.js"></script>
