Commit before push to GitHub

--- a/client/app/utilities/utilities.html
+++ b/client/app/utilities/utilities.html
@@ -52,7 +52,7 @@
 				<!-- rename dirs, root only -->
 				<div class="form-group">
 					<label class="checkbox-inline">
-						<input type="checkbox" value="rootOnly" ng-model="rootOnly" disabled>
+						<input type="checkbox" value="rootOnly" ng-model="rootOnly">
 						Root folder only
 					</label>
 					<label class="checkbox-inline">
