removed imagemin from build task

--- a/client/app/utilities/utilities.html
+++ b/client/app/utilities/utilities.html
@@ -1,7 +1,7 @@
 <header class="hero-unit" id="banner">
   <div class="container">
     <h1>2KVID WebApp v0.6.0</h1>
-    <p class="lead">Super fucking functional</p>
+    <p class="lead">Development version</p>
     <img src="assets/images/2k.png" alt="VidProd Roolz">
   </div>
 </header>
