--- a/client/index.html
+++ b/client/index.html
@@ -77,6 +77,7 @@
       <script src="app/app.constant.js"></script>
       <script src="app/main/main.controller.js"></script>
       <script src="app/main/main.js"></script>
+      <script src="app/utilities/log.filter.js"></script>
       <script src="app/utilities/utilities.controller.js"></script>
       <script src="app/utilities/utilities.js"></script>
       <script src="components/auth/auth.service.js"></script>
